--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -26,7 +26,6 @@
 }
 .navbar-social {
   display: none;
-  visibility: hidden;
 }
 .navbar-nav {
   position: absolute;
